<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="130dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/txtIdOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/order_id"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/imgProduct"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/price"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txtIdOrder"
        app:layout_constraintStart_toEndOf="@id/imgProduct"
        />

    <TextView
        android:id="@+id/txtItemsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/items"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txtTotalPrice"
        app:layout_constraintStart_toEndOf="@id/imgProduct"
        />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/example_date"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtItemsNumber"
        app:layout_constraintStart_toEndOf="@id/imgProduct"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <View
        android:id="@+id/viewSeparator"
        android:background="?attr/colorSeparator"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:alpha="0.2"
        app:layout_constraintTop_toBottomOf="@id/txtDate"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>