<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/scrollViewSignUp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".views.activities.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/create_your_account"
            android:textStyle="bold"
            android:textSize="26sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/editTextEmail"
            />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/rectangle_borders_rounded"
            app:layout_constraintTop_toBottomOf="@id/txtSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.3"
            />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/rectangle_borders_rounded"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/rectangle_borders_rounded"
            app:layout_constraintTop_toBottomOf="@id/editTextName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/rectangle_borders_rounded"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/textViewErrorCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="24dp"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/red_relegation"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:theme="@style/ButtonStyle"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/create_account"
            android:background="@drawable/button_rectangle_ripple_blue"
            app:layout_constraintTop_toBottomOf="@id/textViewErrorCreateAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <View
            android:id="@+id/viewSeparator"
            android:background="?attr/colorSeparator"
            android:layout_width = "match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_rectangle_ripple_transparent"
            android:layout_marginTop="24dp"
            android:text="@string/back_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>