<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.BasketFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/recyclerViewEndGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basketRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewEndGuideline"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutNoBasketItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewEndGuideline"
        >

        <ImageView
            android:id="@+id/imgNoOrders"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_basket"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:tint="@color/blue_button" />

        <TextView
            android:id="@+id/textViewNoBasketItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_basket_items"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/imgNoOrders"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoToShop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:theme="@style/ButtonStyle"
            android:background="@drawable/button_rectangle_oval_blue"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/go_to_shop"
            app:layout_constraintTop_toBottomOf="@id/textViewNoBasketItems"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/viewSeparatorBasket"
        android:background="?attr/colorSeparator"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:alpha="0.8"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewEndGuideline"/>

    <TextView
        android:id="@+id/txtShippingCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipping_costs"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSeparatorBasket"
        />

    <TextView
        android:id="@+id/txtTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_price"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/txtShippingCost"
        app:layout_constraintTop_toBottomOf="@id/txtShippingCost"
        />

    <TextView
        android:id="@+id/txtPriceOfShip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_example"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtShippingCost"
        />

    <TextView
        android:id="@+id/txtFinalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_example"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTotalPrice"
        />

    <TextView
        android:id="@+id/txtShippingCostInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipping_costs_info"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:gravity="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFinalPrice"
        />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:theme="@style/ButtonStyle"
        android:background="@drawable/button_rectangle_ripple_blue"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/complete_order"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtShippingCostInfo" />


</androidx.constraintlayout.widget.ConstraintLayout>