<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".views.activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewAppLogo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/ic_sneaker"
            app:tint="@color/blue_button"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <TextView
            android:id="@+id/txtTitleApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/imageViewAppLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/rectangle_borders_rounded"
            app:layout_constraintTop_toBottomOf="@id/txtTitleApp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/rectangle_borders_rounded"
            app:layout_constraintTop_toBottomOf="@id/editTextUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/textViewErrorLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/empty_credentials"
            android:textSize="16sp"
            android:textColor="@color/red_relegation"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/login_button"
            android:theme="@style/ButtonStyle"
            android:background="@drawable/button_rectangle_ripple_blue"
            app:layout_constraintTop_toBottomOf="@id/textViewErrorLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/textViewCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/create_account"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/btnLogIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/textViewCreateAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnSignInGoogle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/textViewForgotPassword"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!--

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignInGoogle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:visibility="gone"
            android:text="@string/sign_in_google"
            android:background="@drawable/button_rectangle_ripple_red"
            app:layout_constraintTop_toBottomOf="@id/textViewForgotPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

            -->
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>